Mantenimiento preventivo
Se han disminuido los mantenaibilities del sonarcloud

Co-Authored-By: Álvaro Pérez Vargas <80173076+EHDEPELUCHE@users.noreply.github.com>
Co-Authored-By: Marta <96750141+martav2@users.noreply.github.com>